# EoU

./: .gitignore  CLAUDE.md  HOW_IT_WORKS.md  README.md  avc_patents.csv  claim.txt  claim_url.py  claim_v2.txt  parse_avc_pdf.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: eval_runs.py
src/claim_url/: CLAUDE.md  __init__.py  __main__.py  _progress.py  cache.py  cli.py  config.py  errors.py  fetch.py  finder.py  logging_setup.py  models.py  pcs_api.py  pricing.py  serp.py  spec_context.py  trace.py  ui.py  utils.py
src/claim_url/agents/: CLAUDE.md  __init__.py  domain.py  expansion.py  extractor.py  product.py  relevance.py  rewriter.py  search.py  subproduct.py  use_case.py
src/claim_url/llm/: CLAUDE.md  __init__.py  base.py  claude_provider.py  google_provider.py  openai_provider.py
tests/: CLAUDE.md  conftest.py  test_cache.py  test_extractor.py  test_fetch.py  test_finder.py  test_finder_postprocess.py  test_models.py  test_relevance.py  test_search.py  test_subproduct.py  test_utils.py
trace/: EXPERIMENTS.md  refs_run34.txt
trace/run1/: 01_domains.json  02_elements.json  02b_subproducts.json  03_queries.json  04_search.json  05_pagefetch.json  06_scoring.json  07_final.json
trace/run2/: 01_domains.json  02_elements.json  02b_subproducts.json  03_queries.json  04_search.json  05_pagefetch.json  06_scoring.json  07_final.json
trace/run3/: 01_domains.json  02_elements.json  02b_subproducts.json  03_queries.json  04_search.json  05_pagefetch.json  06_scoring.json  07_final.json
