[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-url"
version = "1.0.0"
description = "Find official-source URLs that evidence patent-claim limitations for a given product."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Vinith Vemana", email = "vinith.vemana@dolcera.com" }]
keywords = ["patent", "claim charting", "serpapi", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-search-results>=2.4.2",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
claude = ["anthropic>=0.30"]
google = ["google-genai>=0.3"]
all = [
    "openai>=1.30",
    "anthropic>=0.30",
    "google-genai>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
claim-url = "claim_url.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claim_url = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/claim_url"]
